kubernetes/backend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  labels:
    app.kubernetes.io/name: app-backend
    app.kubernetes.io/instance: app
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: app
    env: "production"
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 8081
